# kani

./: Cargo.toml  README.md
cli/: dm.rs  key.rs  nip19.rs  uri.rs
kani/: Cargo.toml
nostr-tool/: Cargo.toml
nostr-tool/src/: main.rs
src/: cli.rs  config.rs  error.rs  main.rs
src/cli/: common.rs  config.rs  connect.rs  contact.rs  event.rs  key.rs  login.rs  logout.rs  mod.rs  nip05.rs  nip19.rs  nip46.rs  nip47.rs  ots.rs  relay.rs  uri.rs
