[package]
name = "kani"
version = "0.1.0"
edition = "2024"

[dependencies]
nostr-sdk = "0.43.0"
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
nostr = { version = "0.43.0", features = ["nip06", "nip04", "nip46", "nip49", "nip44", "nip59", "nip47"] }
reqwest = "0.12.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
tempfile = "3.10.1"
anyhow = "1.0"
thiserror = "1.0"
url = { version = "2.5.0", features = ["serde"] }
bech32 = "0.11"
